--- a/charts/devtron/templates/dex.yaml
+++ b/charts/devtron/templates/dex.yaml
@@ -76,7 +76,7 @@ spec:
       - command:
         - /shared/authenticator
         - rundex
-        image: {{ .image }}
+        image: {{ include "common.image" (dict "component" $.Values.components.argocdDexServer "global" $.Values.global ) }}
         imagePullPolicy: {{ .imagePullPolicy }}
         name: dex
         {{- if and $.Values.global $.Values.global.containerSecurityContext }}
@@ -100,7 +100,7 @@ spec:
         - -n
         - /authenticator
         - /shared
-        image: {{ .initContainer.authenticator }}
+        image: {{ include "common.image" (dict "component" $.Values.components.argocdDexServer "global" $.Values.global  "extraImage" .initContainer.authenticator) }}
         imagePullPolicy: IfNotPresent
         name: copyutil
         {{- if and $.Values.global $.Values.global.containerSecurityContext }}
