--- a/charts/devtron/templates/install.yaml
+++ b/charts/devtron/templates/install.yaml
@@ -85,12 +85,7 @@ spec:
 {{- toYaml $.Values.global.podSecurityContext | nindent 8 }}
       {{- end }}
       containers:
-        -
-        {{- if $.Values.installer.tag }}
-          image: {{ $.Values.installer.image }}:{{ $.Values.installer.tag }}
-        {{- else }}
-          image: {{ $.Values.installer.image }}
-        {{- end }}
+        - image: {{ include "common.image" (dict "component" $.Values.installer  "global" $.Values.global  ) }}
           imagePullPolicy: IfNotPresent
           name: inception
           {{- if and $.Values.global $.Values.global.containerSecurityContext }}
