--- a/charts/devtron/templates/kubewatch.yaml
+++ b/charts/devtron/templates/kubewatch.yaml
@@ -176,7 +176,7 @@ spec:
       {{- end }}
       containers:
         - name: kubewatch
-          image: {{ .image }}
+          image: {{ include "common.image" (dict "component" $.Values.components.kubewatch "global" $.Values.global) }}
           imagePullPolicy: {{ .imagePullPolicy }}
           {{- if and $.Values.global $.Values.global.containerSecurityContext }}
           securityContext:
