--- a/charts/devtron/templates/workflow.yaml
+++ b/charts/devtron/templates/workflow.yaml
@@ -1186,7 +1186,7 @@ spec:
         {{- if $.Values.workflowController.IMDSv2Enforced }}
         - {{ include "common.image" (dict "component" $.Values.workflowController "global" $.Values.global "extraImage" $.Values.workflowController.executorImage  ) }}
         {{- else }}
-        - quay.io/argoproj/argoexec:v3.0.7
+        - {{ include "common.image" (dict "component" $.Values.workflowController "global" $.Values.global "extraImage" $.Values.workflowController.IMDSv1executorImage  ) }}
         {{- end }}
         command:
         - workflow-controller
@@ -1203,7 +1203,7 @@ spec:
         {{- if $.Values.workflowController.IMDSv2Enforced }}
         image: {{ include "common.image" (dict "component" $.Values.workflowController "global" $.Values.global  ) }}
         {{- else }}
-        image: {{ include "common.image" (dict "component" $.Values.workflowController.IMDSv1 "global" $.Values.global ) }}
+        image: {{ include "common.image" (dict "component" $.Values.workflowController "global" $.Values.global "extraImage" $.Values.workflowController.IMDSv1 ) }}
         {{- end }}
         name: workflow-controller
         {{- if $.Values.workflowController.resources }}        
