--- a/charts/devtron/values.yaml
+++ b/charts/devtron/values.yaml
@@ -75,7 +75,6 @@ components:
     cicdImage: "devtron:e7f34f5a-434-22106"
     imagePullPolicy: IfNotPresent
     customOverrides: {}
-      # DEFAULT_CI_IMAGE: "quay.io/devtron/ci-runner:d5f875c7-138-21576"
     serviceMonitor:
       enabled: false
     service:
@@ -422,6 +421,8 @@ workflowController:
   image: "workflow-controller:v3.4.3"
   executorImage: "argoexec:v3.4.3"
   IMDSv1: "workflow-controller:v3.0.7"
+  IMDSv1executorImage: "argoexec:v3.0.7"
+
 
 # Values for grafana integration
 monitoring:
